fixed organization alignment

--- a/search-style.css
+++ b/search-style.css
@@ -117,7 +117,6 @@ a:active {
     align-items: center;
     margin: 10px;
 }
-
 /* MAIN CONTENT */
 .content-page {
     display: flex;
@@ -126,8 +125,10 @@ a:active {
     padding-top: 70px;
 }
 .content-elements {
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-content: center;
+    column-gap: 100px;
 }
 
 /* SEARCH */
@@ -210,7 +211,8 @@ a:active {
 
 /* ORGANIZATION */
 .org-portion {
-    margin-left: 100px;
+    margin-left: auto;
+    align-self: center;
     flex: 1;
 }
 .org-labels {
